add producs item in locale json files

--- a/public/locales/de/menu.json
+++ b/public/locales/de/menu.json
@@ -49,6 +49,7 @@
 	"CRM": "CRM",
 	"Customers": "Kunden",
 	"Customer": "Kunde",
+	"Products": "Produkte",
 	"Chat": "Plaudern",
 	"With List": "Mit Liste",
 	"Only List": "Nur Liste",
