--- a/public/locales/en/menu.json
+++ b/public/locales/en/menu.json
@@ -49,6 +49,7 @@
 	"CRM": "CRM",
 	"Customers": "Customers",
 	"Customer": "Customer",
+	"Products": "Products",
 	"Chat": "Chat",
 	"With List": "With List",
 	"Only List": "Only List",
