--- a/public/locales/fr/menu.json
+++ b/public/locales/fr/menu.json
@@ -49,6 +49,7 @@
 	"CRM": "CRM",
 	"Customers": "Les Clients",
 	"Customer": "Client",
+	"Products": "Des produits",
 	"Chat": "Discuter",
 	"With List": "Avec Liste",
 	"Only List": "Liste Uniquement",
