--- a/public/locales/tr/menu.json
+++ b/public/locales/tr/menu.json
@@ -49,6 +49,7 @@
 	"CRM": "CRM",
 	"Customers": "Müşteriler",
 	"Customer": "Müşteri",
+	"Products": "Önümler",
 	"Chat": "Yazışma",
 	"With List": "Liste ile",
 	"Only List": "Sadece Liste",
